--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,7 @@
 html
 	user-select: none
+	body
+		font-size: 10px
 @keyframes toBig
 	0%
 		transform: rotateY(0deg) scale(1) translateY(0px)
@@ -7,6 +9,21 @@ html
 		transform: rotateY(0deg) scale(1) translateY(-80px)
 	100%
 		transform: rotateY(0deg) scale(1) translateY(0px)
+.message
+	width: 300px
+	height: 30px
+	overflow-y: scroll
+	padding: 10px
+	border: 1px solid #efefef
+	position: absolute
+	bottom: 0
+.btn
+	padding: 10px
+	margin-top: 10px
+	border: 1px solid #efefef
+	background: #efefef
+	display: inline-block
+	border-radius: 30px
 .box
 	width: 200px
 	height: 200px
