--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -1,4 +1,12 @@
 html
 	user-select: none
-	body
+	background-color: #f5f5f5
+	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+	body, p
+		margin: 0
+		padding: 0
 		font-size: 10px
+	.bg-color-white
+		background-color: #FFF
+	.mt-20
+		margin-top: .2rem
