--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -2,11 +2,22 @@ html
 	user-select: none
 	background-color: #f5f5f5
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
-	body, p
+	body
+		font-size: 10px
+	body, p, ul, li
 		margin: 0
 		padding: 0
-		font-size: 10px
+	em
+		font-style: normal
 	.bg-color-white
 		background-color: #FFF
 	.mt-20
 		margin-top: .2rem
+	.mt-30
+		margin-top: .3rem
+	.mr-10
+		margin-right: .1rem
+	.fl
+		float: left
+	.fr
+		float: right
