--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -18,7 +18,9 @@ html
 	.mr-10
 		margin-right: .1rem
 	.mr-20
-		margin-right: .2rem	
+		margin-right: .2rem
+	.pt-20
+		padding-top: .2rem
 	.fl
 		float: left
 	.fr
