--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -2,8 +2,13 @@ html
 	user-select: none
 	background-color: #f5f5f5
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+	&, body
+		height: 100%
 	body
 		font-size: 10px
+		#root
+			height: 100%
+			overflow-y: auto
 	body, p, ul, li
 		margin: 0
 		padding: 0
