--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -4,30 +4,32 @@ html
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
 	&, body
 		height: 100%
-	body
-		font-size: 10px
-		#root
-			height: 100%
-	body, p, ul, li
-		margin: 0
-		padding: 0
-	em
-		font-style: normal
-	.bg-color-white
-		background-color: #FFF
-	.mt-20
-		margin-top: .2rem
-	.mt-30
-		margin-top: .3rem
-	.mr-10
-		margin-right: .1rem
-	.mr-20
-		margin-right: .2rem
-	.mb-20
-		margin-bottom: .2rem
-	.pt-20
-		padding-top: .2rem
-	.fl
-		float: left
-	.fr
-		float: right
+body
+	font-size: 10px
+	#root
+		height: 100%
+body, p, ul, li
+	margin: 0
+	padding: 0
+em
+	font-style: normal
+.bg-color-white
+	background-color: #FFF
+.mt-20
+	margin-top: .2rem
+.mt-30
+	margin-top: .3rem
+.mr-10
+	margin-right: .1rem
+.mr-20
+	margin-right: .2rem
+.mb-20
+	margin-bottom: .2rem
+.pt-20
+	padding-top: .2rem
+.fl
+	float: left
+.fr
+	float: right
+.hidden
+	overflow: hidden	
