--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -2,6 +2,8 @@ html
 	user-select: none
 	background-color: #f5f5f5
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+	& *
+		outline: none
 	&, body
 		height: 100%
 body
@@ -32,4 +34,4 @@ em
 .fr
 	float: right
 .hidden
-	overflow: hidden	
+	overflow: hidden
