--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -15,6 +15,8 @@ body, p, ul, li
 	padding: 0
 em
 	font-style: normal
+p
+	word-wrap: break-word	
 .bg-color-white
 	background-color: #FFF
 .mt-20
@@ -26,7 +28,7 @@ em
 .mr-20
 	margin-right: .2rem
 .mb-10
-	margin-bottom: .1rem	
+	margin-bottom: .1rem
 .mb-20
 	margin-bottom: .2rem
 .pt-20
