--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -9,8 +9,12 @@ html
 body
 	font-size: 10px
 	#root
-		height: 100%
-body, p, ul, li, h1, h2, h3, h4, h5, h6
+		position: relative
+		background: transparent
+		display: flex
+		flex-direction: column
+		min-height: 100%
+html, body, p, ul, li, h1, h2, h3, h4, h5, h6
 	margin: 0
 	padding: 0
 em
