--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -13,7 +13,8 @@ body
 		background: transparent
 		display: flex
 		flex-direction: column
-		min-height: 100%
+		height: 100%
+		overflow: hidden
 html, body, p, ul, li, h1, h2, h3, h4, h5, h6
 	margin: 0
 	padding: 0
