--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -2,12 +2,15 @@ html
 	user-select: none
 	background-color: #f5f5f5
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+	-webkit-tap-highlight-color: transparent
+	-webkit-appearance: none
 	& *
 		outline: none
 	&, body
 		height: 100%
 body
 	font-size: 10px
+	-webkit-text-size-adjust: none
 	#root
 		position: relative
 		background: transparent
@@ -15,7 +18,9 @@ body
 		flex-direction: column
 		height: 100%
 		overflow: hidden
-html, body, p, ul, li, h1, h2, h3, h4, h5, h6
+html, body, div, p, ul, li, h1, h2, h3, h4, h5, h6
+	-webkit-tap-highlight-color: transparent
+	-webkit-overflow-scrolling: touch
 	margin: 0
 	padding: 0
 em
