--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,2 +1,3 @@
-@import './normalize' //重置样式
-@import './common' //公共样式
+@import './normalize' // 重置样式
+@import './common' // 公共样式
+@import './mint-ui' // mint-ui style修改
