--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -1,30 +1,35 @@
 html
-	user-select: none
-	background-color: #f5f5f5
-	font-family: Helvetica Neue,Helvetica,Arial,sans-serif
-	-webkit-appearance: none
-	& *
-		outline: none
-	&, body
-		height: 100%
+  user-select: none
+  background-color: #f5f5f5
+  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+  -webkit-appearance: none
+  & *
+    outline: none
+  &, body
+    height: 100%
 body
-	font-size: 12px
-	#root
-		position: relative
-		background: transparent
-		display: flex
-		flex-direction: column
-		height: 100%
-		overflow: hidden
+  font-size: 12px
+  overflow: hidden
+  width: 100%
+  height: 100%
+  position: fixed
+  #root
+    position: absolute
+    top: 0
+    bottom: 0
+    background: transparent
+    height: 100%
+    width: 100%
+    overflow: hidden
 html, body, div, p, ul, li, h1, h2, h3, h4, h5, h6
-	-webkit-tap-highlight-color: transparent
-	-webkit-overflow-scrolling: touch
-	margin: 0
-	padding: 0
+  -webkit-tap-highlight-color: transparent
+  -webkit-overflow-scrolling: touch
+  margin: 0
+  padding: 0
 em
-	font-style: normal
+  font-style: normal
 p
-	word-wrap: break-word
+  word-wrap: break-word
 .bg-color-white
 	background-color: #FFF
 @for $i from 1 through 100
